--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -28,13 +28,9 @@
 
   <div>
     <i class="fa fa-map-marker"></i>
-    <p><span>333 หมู่ 1 บ้านป้อหลวงดี</span> เชียงราย, ไทย</p>
+    <p><span>มหาวิทยาลัยแม่ฟ้าหลวง 333 หมู่ 1 ท่าสุด เมือง </span> เชียงราย, ไทย</p>
   </div>
 
-  <div>
-    <i class="fa fa-phone"></i>
-    <p>+66 123 456789</p>
-  </div>
 
   <div>
     <i class="fa fa-envelope"></i>
@@ -47,7 +43,7 @@
 
   <p class="footer-company-about">
     <span>เกี่ยวกับเว็บไซต์</span>
-    Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+    จุดประสงค์ให้ผู้ใช้งานระบบได้รับการสนับสนุนในการจัดการข้อมูลอสังหาริมทรัพย์ โดยเอื้อต่อการเข้าถึง ปรับปรุง และแก้ไขข้อมูลที่ผู้ใช้งานนำเข้าสู่ระบบ
   </p>
 
   <div class="footer-icons">
