--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,7 +1,9 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 
-
+nav {
+    font-family: 'Poppins', 'Prompt', sans-serif;
+}
 .bd-navbar{
     background-color: #292c2f;
     
