--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -23,10 +23,10 @@
       
         <header class="text-center">
             <img
-            src="http://www.landvist.xyz/images/Defult/LOGO.png"
+            src="http://www.landvist.xyz/images/Defult/logo2.png"
             width="300px" height="250px" alt="">
           <h3>สร้างบัญชี</h3>
-          <div>สร้างบัญชี PropertyMBW </div>
+          <div>สร้างบัญชี PropertyMB </div>
         </header>
         <hr>
 
