--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,6 +5,7 @@
   }
   
   .footer-distributed{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     background-color: #292c2f;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
@@ -19,6 +20,7 @@
   .footer-distributed .footer-left,
   .footer-distributed .footer-center,
   .footer-distributed .footer-right{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     display: inline-block;
     vertical-align: top;
   }
@@ -32,6 +34,7 @@
   /* The company logo */
   
   .footer-distributed h3{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     color:  #ffffff;
     font: normal 36px 'Cookie', cursive;
     margin: 0;
@@ -44,6 +47,7 @@
   /* Footer links */
   
   .footer-distributed .footer-links{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     color:  #ffffff;
     margin: 20px 0 12px;
     padding: 0;
@@ -57,6 +61,7 @@
   }
   
   .footer-distributed .footer-company-name{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     color:  #8f9296;
     font-size: 14px;
     font-weight: normal;
@@ -70,6 +75,7 @@
   }
   
   .footer-distributed .footer-center i{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     background-color:  #33383b;
     color: #ffffff;
     font-size: 25px;
@@ -83,11 +89,13 @@
   }
   
   .footer-distributed .footer-center i.fa-envelope{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     font-size: 17px;
     line-height: 38px;
   }
   
   .footer-distributed .footer-center p{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     display: inline-block;
     color: #ffffff;
     vertical-align: middle;
@@ -95,6 +103,7 @@
   }
   
   .footer-distributed .footer-center p span{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     display:block;
     font-weight: normal;
     font-size:14px;
@@ -102,6 +111,7 @@
   }
   
   .footer-distributed .footer-center p a{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     color:  #5383d3;
     text-decoration: none;;
   }
@@ -114,6 +124,7 @@
   }
   
   .footer-distributed .footer-company-about{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     line-height: 20px;
     color:  #92999f;
     font-size: 13px;
@@ -122,6 +133,7 @@
   }
   
   .footer-distributed .footer-company-about span{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     display: block;
     color:  #ffffff;
     font-size: 14px;
@@ -134,6 +146,7 @@
   }
   
   .footer-distributed .footer-icons a{
+    font-family: 'Poppins', 'Prompt', sans-serif;
     display: inline-block;
     width: 35px;
     height: 35px;
@@ -155,12 +168,14 @@
   @media (max-width: 880px) {
   
     .footer-distributed{
+      font-family: 'Poppins', 'Prompt', sans-serif;
       font: bold 14px sans-serif;
     }
   
     .footer-distributed .footer-left,
     .footer-distributed .footer-center,
     .footer-distributed .footer-right{
+      font-family: 'Poppins', 'Prompt', sans-serif;
       display: block;
       width: 100%;
       margin-bottom: 40px;
