--- a/src/app/components/houses/houseslist/houseslist.component.html
+++ b/src/app/components/houses/houseslist/houseslist.component.html
@@ -39,15 +39,14 @@
                       <li>
                         <hr>
                       </li>
-                      <!---->
                       <div id="more-filter-type" class="">
-                        <li><a href="#"><label><input type="checkbox" value="บ้าน"  >
+                        <li><a href="#"><label><input type="checkbox" [(ngModel)]="filter.houses" (change)="filterChange()" >
                               บ้าน
                               <!----></label></a></li>
-                        <li><a href=""><label><input type="checkbox" value="คอนโด" >
+                        <li><a href=""><label><input type="checkbox" [(ngModel)]="filter.condo" (change)="filterChange()">
                               คอนโด
                               <!----></label></a></li>
-                        <li><a href=""><label><input type="checkbox" value="อาคารพาณิชย์" >
+                        <li><a href=""><label><input type="checkbox" [(ngModel)]="filter.property" (change)="filterChange()">
                               อาคารพาณิชย์
                               <!----></label></a></li>
                       </div>
@@ -115,9 +114,11 @@
                             มากกว่า 10,000,000 บาท
                             </label></a></li>
                       <li class="filter-range">
-                        <div class="d-flex"><input type="number" placeholder="ต่ำสุด" min="0" step="1"
+                        <div class="d-flex">
+                          <input type="number" placeholder="ต่ำสุด"
                             class="positive-integer">
-                          <div class="divider">-</div><input type="number" placeholder="สูงสุด" min="0" step="1"
+                          <div class="divider">-</div>
+                          <input type="number" placeholder="สูงสุด" 
                             class="positive-integer">
                           <div class="divider"></div><button>
                             ค้นหา
@@ -127,81 +128,66 @@
                     </ul>
                   </div>
                   <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-brand" aria-controls="filter-brand" class="header">
-                      จังหวัด
-                    </div>
-                    <ul id="filter-brand" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <li class="filter-search"><button><i class="fa fa-search"></i></button><input type="text"
-                        placeholder="ค้นหา" [(ngModel)]="filterPrice"></li>
-                      <!---->
-                      <div id="more-filter-brand" class="">
-                        
+                      <div data-toggle="collapse" data-target="#filter-brand" aria-controls="filter-brand" class="header" >
+                        ที่อยู่
                       </div>
-                      <!---->
-                    </ul>
-                  </div>
-                  <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-cpu" aria-controls="filter-cpu" class="header">
-                      อำเภอ
+                      <ul id="filter-brand" class="filter-item collapse">
+                        <li>
+                          <hr>
+                        </li>
+                        <p>จังหวัด</p>
+                        <li class="filter-search"><select type="text" style="border-radius: 30px 30px 30px 30px;"
+                          placeholder="ค้นหา" class="form-control" [(ngModel)]="searchPro1" (ngModelChange)="selectprovince($event)">
+                          <option>- จังหวัด -</option>
+                                <option *ngFor="let p of province"
+                                [ngValue]="p">
+                                {{p.PROVINCE_NAME}}
+                                </option>
+                        </select></li>
+                        <p>อำเภอ</p>
+                        <li class="filter-search"><select type="text" style="border-radius: 30px 30px 30px 30px;"
+                          placeholder="ค้นหา" class="form-control" [(ngModel)]="searchAmphur1" (ngModelChange)="selectamphur($event)">
+                          <option>- อำเภอ -</option>
+                          <option *ngFor="let a of amphur"
+                              [ngValue]="a">
+                              {{a.AMPHUR_NAME}}</option>
+                        </select></li>
+                        <p>ตำบล</p>
+                        <li class="filter-search"><select type="text" style="border-radius: 30px 30px 30px 30px;"
+                          placeholder="ค้นหา" class="form-control" [(ngModel)]="searchDis1" (ngModelChange)="selectdistrict($event)">
+                          <option>- ตำบล -</option>
+                          <option *ngFor="let d of district"
+                              [ngValue]="d">
+                              {{d.DISTRICT_NAME}}</option>
+                        </select></li>
+                        <!---->
+                        <div id="more-filter-brand" class="">
+                          
+                        </div>
+                        <!---->
+                      </ul>
                     </div>
-                    <ul id="filter-cpu" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <li class="filter-search"><button><i class="fa fa-search"></i></button><input type="text"
-                          placeholder="ค้นหา"></li>
-                      <div id="more-filter-cpu" class=""></div>
-                    </ul>
-                  </div>
                   <div class="filter-box">
                     <div data-toggle="collapse" data-target="#filter-vga" aria-controls="filter-vga" class="header">
-                      สภาพโคลงสร้าง
+                      สภาพโครงสร้าง
                     </div>
                     <ul id="filter-vga" class="filter-item collapse">
                       <li>
                         <hr>
-                      </li>                   
+                      </li>                
                       <div id="more-filter-vga" class="">
                         <li><a href="https://notebookspec.com/notebook/searchV4/?vga=NVIDIA+GeForce+MX150"><label><input
-                                type="checkbox" value="NVIDIA GeForce MX150">
+                                type="checkbox" value="NVIDIA GeForce MX150" [(ngModel)]="filter.newhouse" (change)="filterChange()">
                                 ใหม่
                               </label></a></li>
                         <li><a href="https://notebookspec.com/notebook/searchV4/?vga=Intel+UHD+Graphics+620"><label><input
-                                type="checkbox" value="Intel UHD Graphics 620">
-                                เก่า
+                                type="checkbox" value="Intel UHD Graphics 620" [(ngModel)]="filter.oldhouse" (change)="filterChange()">
+                                มือสอง
                               </label></a></li>                                   
                       </div>
                     </ul>
                   </div>
-                  <div class="filter-box">
-                    <div data-toggle="collapse" data-target="#filter-ram" aria-controls="filter-ram" class="header">
-                      ทำเลที่ตั้ง
-                    </div>
-                    <ul id="filter-ram" class="filter-item collapse">
-                      <li>
-                        <hr>
-                      </li>
-                      <!---->
-                      <div id="more-filter-ram" class="">
-                        <li><a href="https://notebookspec.com/notebook/searchV4/?vga=NVIDIA+GeForce+MX150"><label><input
-                          type="checkbox" value="NVIDIA GeForce MX150">
-                          ติดถนน
-                        </label></a></li>
-                  <li><a href="https://notebookspec.com/notebook/searchV4/?vga=Intel+UHD+Graphics+620"><label><input
-                          type="checkbox" value="Intel UHD Graphics 620">
-                          อยู่ในซอย
-                        </label></a></li> 
-                  <li><a href="https://notebookspec.com/notebook/searchV4/?vga=Intel+UHD+Graphics+620"><label><input
-                          type="checkbox" value="Intel UHD Graphics 620">
-                          ใกล้ศูนย์การค้า
-                        </label></a></li> 
-                      </div>
-                      <!---->
-                    </ul>
-                  </div>                            
+                  
                 </div>
                 <div id="modal-bg"></div>
                 <div id="search-result">
@@ -210,7 +196,7 @@
                     <div class="search-box">
                       <div class="search-form">
                         <div class="input-group mb-3">
-                          <input style="border-radius: 30px 30px 30px 30px;" [(ngModel)]="searchTherm" type="text"
+                          <input style="border-radius: 30px 30px 30px 30px;" [(ngModel)]="searchTerm" type="text"
                             class="form-control" placeholder="ค้นหาที่ดินที่คุณต้องการ">
                           <div class="input-group-append">
                             <button class="btn btn-circle"><i class="fa fa-search"></i></button>
@@ -229,8 +215,54 @@
                     <ul class="filter-list"></ul>
                   </div>
                   <div class="search-grid row col-eq">
-                    <div
-                      *ngFor="let houses of details | slice:pointStart:pointEnd | propertyFilter : filterPrice "
+                   
+                    <ng-container *ngIf="!filterProperty.length; else elseTemplate">
+                      <div
+                    *ngFor="let houses of properties | slice:pointStart:pointEnd | propertyFilter : searchTerm  | provinceFilter : searchPro | amphurFilter : searchAmphur | districtFilter : searchDis "
+                    class="col-xs-12 col-sm-6 col-lg-4 item">
+                    <div class="box jumbotron ">
+                      <div class=""><button type="button" class="compare-btn"><i aria-hidden="true"
+                            class="fa fa-plus"></i>
+                          Add to group
+                        </button><a [routerLink]="['/houses',houses.ID_Property]" [queryParams]="{page: activePage}"
+                          target="_blank">
+                          <div class="title">
+                            {{houses.AnnounceTH}} <br>
+                          </div>
+                        </a>
+                        <div class=""><a [routerLink]="['/houses',houses.ID_Property]"
+                            [queryParams]="{page: activePage}"><img
+                              src="http://www.landvist.xyz/images/{{houses.ImageEX}}"
+                              class="img-responsive notebook-img rounded"></a>
+                          <!---->
+                          <hr>
+                          <ul class="specification">
+                            <li></li>
+                            <li>{{houses.PropertyType}}</li>
+                            <li>{{houses.LandR}} / {{houses.LandG}} / {{houses.LandWA}}</li>
+                            <li>{{houses.Location}}</li>
+                            <li>{{houses.ObservationPoint}}</li>
+                          </ul>
+                        </div>
+                        <!---->
+                        <div class="info">
+                          <div class="price">
+                            ราคา
+                            <span>{{houses.SellPrice | number}}</span>
+                            บาท
+                          </div>
+                          <ul>
+                            <li>อัพเดทล่าสุด {{houses.Created| timeAgoThai}}</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <!---->
+                    </div>
+                  </div>
+                    </ng-container>
+                    <ng-template #elseTemplate>
+                      <div
+                      *ngFor="let houses of filterProperty | slice:pointStart:pointEnd | propertyFilter : searchTerm | provinceFilter : searchPro | amphurFilter : searchAmphur | districtFilter : searchDis"
                       class="col-xs-12 col-sm-6 col-lg-4 item">
                       <div class="box jumbotron ">
                         <div class=""><button type="button" class="compare-btn"><i aria-hidden="true"
@@ -271,6 +303,10 @@
                         <!---->
                       </div>
                     </div>
+                    </ng-template>
+                    
+                    
+               
 
                   </div>
 
