--- a/src/app/components/lands/lands-detail/lands-detail.component.css
+++ b/src/app/components/lands/lands-detail/lands-detail.component.css
@@ -1,5 +1,3 @@
-@import "~bootstrap/dist/css/bootstrap.css";
-@import "~font-awesome/css/font-awesome.css";
 
 .logo-distributed h3{
   color:  #000000;
@@ -14,6 +12,30 @@ input.ng-invalid.ng-touched {
     border: solid 1px red;
 }
 
+input.ng-invalid.ng-touched {
+    border: solid 1px red;
+}
+kendo-pdf-export {
+  font-family: "DejaVu Sans", "Arial", sans-serif;
+  font-size: 12px;
+}
+button {
+  margin-right: 1em;
+}
+gallery{
+  background: #ECEFF1;
+}
+.img{      
+  margin:6px 6px;      
+  border: 4px solid #eee;      
+  box-shadow:rgb(224, 199, 199) 1px 1px 8px 1px;      
+  cursor: pointer      
+     }      
+ .modal-content {      
+   width: 1000px !important;      
+ }      
+ ul { padding:0; width:1200px; margin:20px auto;margin-left: 80px}      
+ li { display:inline;}  
 hr {
   width: 1000px;
 }
@@ -33,6 +55,9 @@ hr {
   color: white;
   padding-left: 20px;
   padding-right: 20px;
+}
+agm-map {
+  height: 300px;
 }
 input
     {
@@ -1951,7 +1976,8 @@ a, a:hover, a:active, a:focus{
 
 /*---------------------------------------------------------- HEADER ------------------------------------------------------------------*/
 #web-body{
-	position:relative;
+  position:relative;
+  
 }
 #menu-list{
 	position:absolute;
@@ -3767,42 +3793,8 @@ html,body{
   #product-specificate{
     margin-bottom: 30px;
   }
-  #product-specificate .nav-tabs {
-    border-bottom: 2px solid #333333;
-  }
-  #product-specificate .nav-tabs > li {
-    margin-bottom: -2px;
-  }
-  #product-specificate .nav-tabs li a{
-    border-radius: 0px;
-    /*font-family:OpenSans-Semibold;*/
-    font-weight: 600;
-    font-size: 14px;
-    padding: 6px 20px;
-    margin-right: 10px;
-    color: #FFF;
-    line-height: normal;
-    height: 34px;
-    background-color: #333333;
-    border: 2px solid #333333;
-  }
-  #product-specificate .nav-tabs li a:hover{
-    background-color: #ff3c1f;
-    border: 2px solid #ff3c1f;
-  }
-  #product-specificate .nav-tabs li.active a, 
-  #product-specificate .nav-tabs li.active a:hover, 
-  #product-specificate .nav-tabs li.active a:focus{
-    color: #333333;
-    background-color: #fff;
-    border: 2px solid #333333;
-    border-bottom-color: transparent;
-  }
-  #product-specificate .tab-content .tab-pane{
-    border: 2px solid #333333;
-    border-top: none;
-    padding: 25px;
-  }
+
+
   #specificate .header-blog{
     /*font-family:OpenSans-Semibold;*/
     font-weight: 600;
@@ -7726,12 +7718,7 @@ html {
   input[type="button"].btn-block {
     width: 100%;
   }
-  .fade {
-    opacity: 0;
-    -webkit-transition: opacity .15s linear;
-         -o-transition: opacity .15s linear;
-            transition: opacity .15s linear;
-  }
+ 
   .fade.in {
     opacity: 1;
   }
@@ -8277,46 +8264,9 @@ html {
   .nav > li > a > img {
     max-width: none;
   }
-  .nav-tabs {
-    border-bottom: 1px solid #ddd;
-  }
-  .nav-tabs > li {
-    float: left;
-    margin-bottom: -1px;
-  }
-  .nav-tabs > li > a {
-    margin-right: 2px;
-    line-height: 1.42857143;
-    border: 1px solid transparent;
-    border-radius: 4px 4px 0 0;
-  }
-  .nav-tabs > li > a:hover {
-    border-color: #eee #eee #ddd;
-  }
-  .nav-tabs > li.active > a,
-  .nav-tabs > li.active > a:hover,
-  .nav-tabs > li.active > a:focus {
-    color: #555;
-    cursor: default;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-bottom-color: transparent;
-  }
-  .nav-tabs.nav-justified {
-    width: 100%;
-    border-bottom: 0;
-  }
-  .nav-tabs.nav-justified > li {
-    float: none;
-  }
-  .nav-tabs.nav-justified > li > a {
-    margin-bottom: 5px;
-    text-align: center;
-  }
-  .nav-tabs.nav-justified > .dropdown .dropdown-menu {
-    top: auto;
-    left: auto;
-  }
+
+ 
+  
   @media (min-width: 768px) {
     .nav-tabs.nav-justified > li {
       display: table-cell;
@@ -8414,12 +8364,8 @@ html {
       border-bottom-color: #fff;
     }
   }
-  .tab-content > .tab-pane {
-    display: none;
-  }
-  .tab-content > .active {
-    display: block;
-  }
+ 
+ 
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
     border-top-left-radius: 0;
