--- a/src/app/components/lands/landslist/landslist.component.html
+++ b/src/app/components/lands/landslist/landslist.component.html
@@ -290,7 +290,7 @@
                             <div class="info">
                               <div class="price">
                                 ราคา
-                                <span>{{lands.SellPrice | number}}</span>
+                                <span>{{lands.SellPrice}}</span>
                                 บาท
                               </div>
                               <ul>
