--- a/src/app/components/property/propertylist/propertylist.component.html
+++ b/src/app/components/property/propertylist/propertylist.component.html
@@ -245,7 +245,7 @@
                         <div class="info">
                           <div class="price">
                             ราคา
-                            <span>{{houses.SellPrice | number}}</span>
+                            <span>{{houses.SellPrice}}</span>
                             บาท
                           </div>
                           <ul>
@@ -289,7 +289,7 @@
                           <div class="info">
                             <div class="price">
                               ราคา
-                              <span>{{houses.SellPrice | number}}</span>
+                              <span>{{houses.SellPrice}}</span>
                               บาท
                             </div>
                             <ul>
