--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -108,7 +108,7 @@
 
             <a [routerLink]="['/houses',house.ID_Property]">
               <div class="item">
-                <img src="http://www.landvist.xyz/images/{{house.ImageEX}}" width="180"
+                <img src="http://www.landvist.xyz/images/{{house.ImageEX}}" width="180" height="50"
                   class="img-fluid ">
                 <div class="info">
                   <header>{{house.AnnounceTH}}</header>
