--- a/src/app/components/addlands/addlands.component.css
+++ b/src/app/components/addlands/addlands.component.css
@@ -1,3 +1,7 @@
+.ng-autocomplete {
+  width: 330px;
+  border-radius: 30px 30px 30px 30px;
+}
 input.ng-invalid.ng-touched {
   border: solid 1px rgb(238, 74, 74);
 }
